--- a/_text_styles.css
+++ b/_text_styles.css
@@ -1,20 +1,26 @@
-.subheader-text {
-     font-family: var(--subheader-text-font-family);
-     font-size: var(--subheader-text-font-size);
+.system-font {
+     font-family: system-font-font-family;
+     font-size: system-font-font-size;
+     font-weight: system-font-font-weight;
+}
+.test {
+     font-family: test-font-family;
+     font-size: test-font-size;
+     font-weight: test-font-weight;
 }
 .footer-text {
-     font-family: var(--footer-text-font-family);
-     font-size: var(--footer-text-font-size);
+     font-family: footer-text-font-family;
+     font-size: footer-text-font-size;
 }
 .menu-text {
-     font-family: var(--menu-text-font-family);
-     font-size: var(--menu-text-font-size);
+     font-family: menu-text-font-family;
+     font-size: menu-text-font-size;
 }
 .body-text {
-     font-family: var(--body-text-font-family);
-     font-size: var(--body-text-font-size);
+     font-family: body-text-font-family;
+     font-size: body-text-font-size;
 }
 .header-text {
-     font-family: var(--header-text-font-family);
-     font-size: var(--header-text-font-size);
+     font-family: header-text-font-family;
+     font-size: header-text-font-size;
 }
