--- a/_vars.css
+++ b/_vars.css
@@ -1,31 +1,33 @@
-:root {
-    /* Colors */
-    --subheader-text-color: #d6d6d6;
-    --footer-text-color: #92e2df;
-    --menu-text-hover: #c5ae86;
-    --header-text-color: #ffffff;
-    --body-text-color: #ffffff;
-    --menu-text-color: #ffe0aa;
-    --body-color: #1d0b42;
-    /* Text Styles */
-    --subheader-text-font-family: "Georgia";
-    --subheader-text-font-size: 20px;
-    --footer-text-font-family: "Helvetica";
-    --footer-text-font-size: 15px;
-    --menu-text-font-family: "Helvetica";
-    --menu-text-font-size: 15px;
-    --body-text-font-family: "Georgia";
-    --body-text-font-size: 18px;
-    --header-text-font-family: "Helvetica";
-    --header-text-font-size: 30px;
-    /* Layer Styles */
-    --top-menu-background-color: #191919;
-    --top-menu-border-width: 1px;
-    --top-menu-border-color: #979797;
-    --top-menu-border-style: solid;
-    --top-menu-shadow-offset-x: 0px;
-    --top-menu-shadow-offset-y: 2px;
-    --top-menu-shadow-blur: 4px;
-    --top-menu-shadow-spread: 0px;
-    --top-menu-shadow-color: rgba(0,0,0,0.50);
-}
+/* Colors */
+--subheader-text-color: #d6d6d6;
+--footer-text-color: #92e2df;
+--menu-text-hover: #c5ae86;
+--header-text-color: #ffffff;
+--body-text-color: #ffffff;
+--menu-text-color: #ffe0aa;
+--body-color: #1d0b42;
+/* Text Styles */
+--system-font-font-family: "Arial Bold";
+--system-font-font-size: 16px;
+--system-font-font-weight: 400;
+--test-font-family: "Roboto";
+--test-font-size: 16px;
+--test-font-weight: 100;
+--footer-text-font-family: "Helvetica";
+--footer-text-font-size: 15px;
+--menu-text-font-family: "Helvetica";
+--menu-text-font-size: 15px;
+--body-text-font-family: "Roboto";
+--body-text-font-size: 16px;
+--header-text-font-family: "Helvetica";
+--header-text-font-size: 30px;
+/* Layer Styles */
+--top-menu-background-color: #191919;
+--top-menu-border-width: 1px;
+--top-menu-border-color: #979797;
+--top-menu-border-style: solid;
+--top-menu-shadow-offset-x: 0px;
+--top-menu-shadow-offset-y: 2px;
+--top-menu-shadow-blur: 4px;
+--top-menu-shadow-spread: 0px;
+--top-menu-shadow-color: rgba(0,0,0,0.50);
